# Streaming-Platform

./: .gitignore  CMakeLists.txt  README.md  generar_html
frontend/: index.html  package-lock.json  package.json  styles.css  tsconfig.json  webpack.config.js
frontend/src_front/: auth.ts  main.ts  movieService.ts  stack.ts  userService.ts
src/: AlgoritmoSimlitud.h  DataProcessor.cpp  DataProcessor.h  ListaPila.h  Megusta.h  RelevanceCalculator.cpp  RelevanceCalculator.h  SearchTree.cpp  SearchTree.h  SimilitudFactory.h  SimilitudSinopsis.h  SimilitudTag.h  TagTree.cpp  TagTree.h  Ver_masTarde.cpp  Ver_masTarde.h  main.cpp  observer.h  recomendador.h  subject.h
